tests/requests/valid/rfc9112_chunked_size_leading_zeros_01.http
POST /upload HTTP/1.1\r\n
Host: example.com\r\n
Transfer-Encoding: chunked\r\n
\r\n
0005\r\n
hello\r\n
0\r\n
\r\n
